# phoenix-channel-runtime

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  pages.yml
crates/phoenix-channel-client/: Cargo.toml  README.md
crates/phoenix-channel-client/src/: lib.rs
crates/phoenix-channel-client/src/client/: config.rs  endpoint.rs  mod.rs  presence.rs  tests.rs  tracing_support.rs
crates/phoenix-channel-runtime/: Cargo.toml  README.md
crates/phoenix-channel-runtime-native/: Cargo.toml  README.md
crates/phoenix-channel-runtime-native/examples/: join.rs
crates/phoenix-channel-runtime-native/src/: lib.rs  managed.rs
crates/phoenix-channel-runtime-native/tests/: phoenix_server.rs
crates/phoenix-channel-runtime-web/: Cargo.toml  README.md
crates/phoenix-channel-runtime-web/src/: lib.rs
crates/phoenix-channel-runtime-web/tests/: phoenix_server.rs
crates/phoenix-channel-runtime/src/: codec.rs  frame.rs  lib.rs  payload.rs  presence.rs  protocol.rs  session.rs  transport.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: codec.rs
pages/: index.html
tests/fixtures/phoenix_server/: mix.exs
tests/fixtures/phoenix_server/config/: config.exs
tests/fixtures/phoenix_server/lib/phoenix_channel_fixture/: application.ex  endpoint.ex  room_channel.ex  silent_web_socket.ex  user_socket.ex
