[workspace]
resolver = "2"
members = [
  "crates/phoenix-channel-runtime",
  "crates/phoenix-channel-runtime-native",
  "crates/phoenix-channel-runtime-web",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/refmdio/phoenix-channel-runtime"

[workspace.dependencies]
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
