[workspace]
resolver = "2"
members = [
  "crates/phoenix-channel-client",
  "crates/phoenix-channel-runtime",
  "crates/phoenix-channel-runtime-native",
  "crates/phoenix-channel-runtime-web",
]
exclude = ["fuzz"]

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/refmdio/phoenix-channel-runtime"
homepage = "https://refmdio.github.io/phoenix-channel-runtime/"

[workspace.dependencies]
base64 = "0.22.1"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
url = "2.5.8"
