[package]
name = "phoenix-channel-client"
description = "Managed, runtime-independent Socket and Channel client for Phoenix Channels"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
futures.workspace = true
phoenix-channel-runtime = { path = "../phoenix-channel-runtime" }
serde_json.workspace = true
thiserror.workspace = true
