[package]
name = "phoenix-channel-client"
description = "Managed, runtime-independent Socket and Channel client for Phoenix Channels"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
futures.workspace = true
phoenix-channel-runtime = { version = "0.1.0", path = "../phoenix-channel-runtime" }
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true
