[package]
name = "phoenix-channel-client"
description = "Managed, runtime-independent Socket and Channel client for Phoenix Channels"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["phoenix", "channels", "elixir", "websocket"]
categories = ["asynchronous", "network-programming", "web-programming::websocket"]

[dependencies]
base64.workspace = true
futures.workspace = true
phoenix-channel-runtime = { version = "0.1.1", path = "../phoenix-channel-runtime" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true
tracing = { version = "0.1.44", optional = true }

[features]
default = []
tracing = ["dep:tracing"]

[package.metadata.docs.rs]
all-features = true
