[package]
name = "phoenix-channel-runtime-native"
description = "Native WebSocket transport for phoenix-channel-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["phoenix", "channels", "elixir", "websocket", "tokio"]
categories = ["asynchronous", "network-programming", "web-programming::websocket"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
base64.workspace = true
phoenix-channel-client = { version = "0.1.1", path = "../phoenix-channel-client" }
phoenix-channel-runtime = { version = "0.1.1", path = "../phoenix-channel-runtime" }
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
url.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures.workspace = true
rustls = { version = "0.23.36", default-features = false, features = ["ring", "std", "tls12"] }
tokio = { version = "1.49.0", features = ["io-util", "macros", "net", "rt", "sync", "time"] }
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"] }

[[example]]
name = "join"
path = "examples/join.rs"
required-features = []
