[package]
name = "phoenix-channel-runtime-web"
description = "Browser WebSocket transport for phoenix-channel-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
phoenix-channel-client = { path = "../phoenix-channel-client" }
phoenix-channel-runtime = { path = "../phoenix-channel-runtime" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures.workspace = true
gloo-net = { version = "0.7.0", features = ["websocket"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
