[package]
name = "phoenix-channel-runtime-web"
description = "Browser WebSocket transport for phoenix-channel-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["phoenix", "channels", "elixir", "websocket", "wasm"]
categories = ["asynchronous", "wasm", "web-programming::websocket"]

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
targets = ["wasm32-unknown-unknown"]

[dependencies]
phoenix-channel-client = { version = "0.1.0", path = "../phoenix-channel-client" }
phoenix-channel-runtime = { version = "0.1.0", path = "../phoenix-channel-runtime" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
base64.workspace = true
futures.workspace = true
gloo-net = { version = "0.7.0", features = ["json", "websocket"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
serde.workspace = true
serde_json.workspace = true
url.workspace = true
wasm-bindgen = "0.2.126"
wasm-bindgen-futures = "0.4.76"
web-sys = { version = "0.3.103", features = ["AbortController", "AbortSignal", "Document", "Event", "EventTarget", "Performance", "VisibilityState", "Window"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
serde_json.workspace = true
wasm-bindgen-test = "0.3.76"
